<resources>
    <string name="app_name">Bill Calculator</string>
    <string name="amount">Amount</string>
    <string name="enter_your_amount_here">Enter your amount here</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="enter_pax_size">Enter pax size</string>
    <string name="svsoff">SVS</string>
    <string name="svson">SVS</string>
    <string name="gstoff">GST</string>
    <string name="gston">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="discountText">Enter your discount here</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="total_bill">Total Bill:</string>
    <string name="each_pays">Each pays:</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>
</resources>